<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainScroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    android:padding="15dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView android:id="@+id/fragmentTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About Karuah Chess"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="0dp"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            />

        <LinearLayout
            android:id="@+id/mainFragmentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/fragmentTitleText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView android:id="@+id/versionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="0dp"
                style="@style/TextAppearance.MaterialComponents.Body1"

                />

            <TextView android:id="@+id/aboutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="0dp"
                android:text="@string/about_info"
                android:autoLink="web"
                style="@style/TextAppearance.MaterialComponents.Body1"
                />

            <TextView android:id="@+id/otherTextA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="0dp"
                android:text="@string/other_infoA"
                android:autoLink="web"
                style="@style/TextAppearance.MaterialComponents.Body1"
                />

            <TextView android:id="@+id/otherTextB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="0dp"
                android:text="@string/other_infoB"
                android:autoLink="web"
                style="@style/TextAppearance.MaterialComponents.Body1"
                />

            <TextView android:id="@+id/otherTextC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="0dp"
                android:text="@string/other_infoC"
                android:autoLink="web"
                style="@style/TextAppearance.MaterialComponents.Body1"
                />

            <TextView android:id="@+id/licenseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="0dp"
                android:text="@string/license_title"
                android:autoLink="web"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"

                />

            <TextView android:id="@+id/licenseAText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="0dp"
                android:text="@string/license_infoA"
                android:autoLink="web"
                style="@style/TextAppearance.MaterialComponents.Body1"
                />

            <TextView android:id="@+id/licenseBText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="0dp"
                android:text="@string/license_infoB"
                android:autoLink="web"
                style="@style/TextAppearance.MaterialComponents.Body1"
                />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/mainFragmentLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            >

            <Button
                android:id="@+id/doneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ButtonDialogStyle"
                android:text="Close"/>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

